# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  13 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    Fix single user mode, #154961

* baselayout-1.13.0_alpha7 (10 Nov 2006)

  10 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    s-s-d wrapper now works with all perumations of the options, #154649.

    Re-wrote chunks of checkfs and checkroot to tidy things up and more
    importantly return 0 when fsck returns 8 (operational error) which allows
    us to switch seemlessly from single user to multi user on FreeBSD.

    Enforce SOFTLEVEL from the file and not from the environment.

    Don't allow services to start or restart shutdown, reboot or single
    runlevels.

    rc-status now shows services that are scheduled to be started by something.

* baselayout-1.13.0_alpha6 (08 Nov 2006)

  08 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    tuntap interface is now destroyed correctly, #154509 thanks to Andrew Lambe.

    We now keep $svcdir mounted in a ramdisk all the time as discussed
    on gentoo-dev. Dropped the exitcodes folder (useless really) to save
    on a fair chunk of space.
    
    Credit to trudefx for finding a way to use == instead of =~.
    Replaced a few instances of =~ to == as a result.

    halt.sh no longer matches fstype as mounting --bind makes that
    redundant. Instead we just avoid unmounting / /dev /dev/pts and /proc.

    consolefont now supports UNICODEMAP variable, #144938.

    modules now supports config files based on $SOFTLEVEL, #149568
    thanks to Vincent Poinot.

  06 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    Ensure that we only move $svcdir from tmpfs to disk if $svclib is rw.
    Thanks to Bruno for the idea.

  05 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    Don't create /proc on Linux as build scripts like to handle it now.
    Fixes #154126.

* baselayout-1.13.0_alpha5 (02 Nov 2006)
